--- a/MicroserviceConfiguration/authServer-dev.yml
+++ b/MicroserviceConfiguration/authServer-dev.yml
@@ -26,6 +26,11 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
+flyway:
+  url: ${dataBaseURL}
+  user: ${dataBaseUsername}
+  password: ${dataBasePassword}
+  locations: filesystem:src/main/resources/sql/migrations
 eureka:
   client:
     registerWithEureka: true
