--- a/MicroserviceConfiguration/authServer-dev.yml
+++ b/MicroserviceConfiguration/authServer-dev.yml
@@ -20,7 +20,9 @@ spring:
   flyway:
     locations: classpath:/db/migrations
     baselineOnMigrate: true
-    validateOnMigrate: false
+    check-location: true
+    schemas: public
+    enabled: true
   jpa:
     database-platform: org.hibernate.spatial.dialect.postgis.PostgisDialect
     hibernate:
