--- a/MicroserviceConfiguration/authServer-prod.yml
+++ b/MicroserviceConfiguration/authServer-prod.yml
@@ -1,4 +1,4 @@
-dataBaseURL: jdbc:postgresql://localhost:5432/koi
+dataBaseURL: jdbc:postgresql://localhost:5431/koi
 dataBaseUsername: postgres
 dataBasePassword: Ga.4567.
 logbackURL: http://localhost:8000/native/native/main/LogConfiguration/AuthServerLogback.xml
@@ -7,7 +7,6 @@ eurakaPassword: 1234
 eurakaIP: localhost:8001/eureka/
 resetPasswordTokenExpriationMinute: 2
 resetPasswordTokenLength: 8
-
 
 server:
   port: 8004
@@ -19,9 +18,11 @@ spring:
     url: ${dataBaseURL}
     password: ${dataBasePassword}
   jpa:
-    database: postgresql
+    database-platform: org.hibernate.spatial.dialect.postgis.PostgisDialect
     hibernate:
-      ddl-auto: none
+      dialect: org.hibernate.spatial.dialect.postgis.PostgisDialect
+      database: postgresql
+      ddl-auto: update
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
