--- a/MicroserviceConfiguration/emailService-dev.yml
+++ b/MicroserviceConfiguration/emailService-dev.yml
@@ -11,8 +11,8 @@ spring:
   mail:
     host: smtp-mail.outlook.com
     port: 587
-    username:
-    password:
+    username: test_koi_project@outlook.com
+    password: Gg123456
     properties:
       mail:
         smtp:
