--- a/MicroserviceConfiguration/emailService-dev.yml
+++ b/MicroserviceConfiguration/emailService-dev.yml
@@ -12,7 +12,7 @@ spring:
     host: smtp-mail.outlook.com
     port: 587
     username: test.koi.project@gmail.com
-    password: 'wyfx trqv foue nvrh'
+    password:  "dgrk fpec iwsz qzld"
     properties:
       mail:
         smtp:
