--- a/MicroserviceConfiguration/emailService-dev.yml
+++ b/MicroserviceConfiguration/emailService-dev.yml
@@ -9,13 +9,17 @@ spring:
   application:
     name: EMAIL-SERVICE
   mail:
-    host: smtp-mail.outlook.com
-    port: 587
     username: test.koi.project@gmail.com
     password:  "dgrk fpec iwsz qzld"
     properties:
       mail:
         smtp:
+          host: smtp.gmail.com
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          port: 465
           starttls:
             enable: true
   thymeleaf:
