--- a/MicroserviceConfiguration/emailService-dev.yml
+++ b/MicroserviceConfiguration/emailService-dev.yml
@@ -3,8 +3,12 @@ eurakaUsername: grkem
 eurakaPassword: 1234
 eurakaIP: localhost:8001/eureka/
 
+
 server:
   port: 8005
+  error:
+    include-message: always
+    include-binding-errors: always
 spring:
   application:
     name: EMAIL-SERVICE
