--- a/MicroserviceConfiguration/authServer-dev.yml
+++ b/MicroserviceConfiguration/authServer-dev.yml
@@ -10,6 +10,9 @@ resetPasswordTokenLength: 8
 
 server:
   port: 8004
+  error:
+    include-message: always
+    include-binding-errors: always
 spring:
   application:
     name: AUTH-SERVER
