--- a/MicroserviceConfiguration/userDetailService-prod.yml
+++ b/MicroserviceConfiguration/userDetailService-prod.yml
@@ -11,6 +11,9 @@ userDetail:
 
 server:
   port: 8600
+  error:
+    include-message: always
+    include-binding-errors: always
 spring:
   application:
     name: USER-DETAIL
