--- a/MicroserviceConfiguration/authServer-dev.yml
+++ b/MicroserviceConfiguration/authServer-dev.yml
@@ -7,6 +7,7 @@ eurakaPassword: 1234
 eurakaIP: localhost:8001/eureka/
 resetPasswordTokenExpriationMinute: 2
 resetPasswordTokenLength: 8
+activeAccountTokenLength: 8
 
 server:
   port: 8004
