--- a/MicroserviceConfiguration/authServer-prod.yml
+++ b/MicroserviceConfiguration/authServer-prod.yml
@@ -6,7 +6,9 @@ eurakaUsername: grkem
 eurakaPassword: 1234
 eurakaIP: localhost:8001/eureka/
 resetPasswordTokenExpriationMinute: 2
+activeAccountTokenExpriationMinute: 60
 resetPasswordTokenLength: 8
+activeAccountTokenLength: 8
 
 server:
   port: 8004
