--- a/MicroserviceConfiguration/commentService-dev.yml
+++ b/MicroserviceConfiguration/commentService-dev.yml
@@ -6,6 +6,14 @@ eurakaUsername: grkem
 eurakaPassword: 1234
 eurakaIP: localhost:8001/eureka/
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+sample.rabbitmq.exchange=default
+sample.rabbitmq.queue=firstStepQueue
+sample.rabbitmq.routingKey=firstRoute
 
 server:
   port: 8602
@@ -25,9 +33,19 @@ spring:
       dialect: org.hibernate.spatial.dialect.postgis.PostgisDialect
       database: postgresql
       ddl-auto: update
+  rabbitmq:
+    host: localhost
+    port: 15672
+    username: guest
+    password: guest
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
+sample:
+  rabbitmq:
+    exchange: default
+    updateUserDetailQueue: updateUserDetailQueue
+    routingKey: updateUserDetailRoute
 eureka:
   client:
     registerWithEureka: true
