--- a/MicroserviceConfiguration/commentService-dev.yml
+++ b/MicroserviceConfiguration/commentService-dev.yml
@@ -25,7 +25,7 @@ spring:
       database: postgresql
       ddl-auto: update
   rabbitmq:
-    host: 192.168.1.2
+    host: http://192.168.1.2
     port: 15672
     username: guest
     password: guest
