--- a/MicroserviceConfiguration/commentService-dev.yml
+++ b/MicroserviceConfiguration/commentService-dev.yml
@@ -25,7 +25,7 @@ spring:
       database: postgresql
       ddl-auto: update
   rabbitmq:
-    host: localhost
+    host: 127.0.0.1
     port: 15672
     username: guest
     password: guest
