--- a/MicroserviceConfiguration/commentService-dev.yml
+++ b/MicroserviceConfiguration/commentService-dev.yml
@@ -15,7 +15,7 @@ spring:
   rabbitmq:
     user: guest
     password: guest
-    host: rabbitmq
+    host: localhost
     port: 15672
   application:
     name: COMMENT-SERVICE
