--- a/MicroserviceConfiguration/userDetailService-dev.yml
+++ b/MicroserviceConfiguration/userDetailService-dev.yml
@@ -15,6 +15,11 @@ server:
     include-message: always
     include-binding-errors: always
 spring:
+  rabbitmq:
+    user: guest
+    password: guest
+    host: localhost
+    port: 5672
   application:
     name: USER-DETAIL
   datasource:   
