--- a/MicroserviceConfiguration/userDetailService-prod.yml
+++ b/MicroserviceConfiguration/userDetailService-prod.yml
@@ -15,9 +15,14 @@ server:
     include-message: always
     include-binding-errors: always
 spring:
+  rabbitmq:
+    user: guest
+    password: guest
+    host: localhost
+    port: 5672
   application:
     name: USER-DETAIL
-  datasource:
+  datasource:   
     username: ${dataBaseUsername}
     url: ${dataBaseURL}
     password: ${dataBasePassword}
