--- a/MicroserviceConfiguration/authServer-dev.yml
+++ b/MicroserviceConfiguration/authServer-dev.yml
@@ -44,6 +44,7 @@ spring:
     url: ${dataBaseURL}
     password: ${dataBasePassword}
   jpa:
+    show-sql: true
     database-platform: org.hibernate.spatial.dialect.postgis.PostgisDialect
     hibernate:
       dialect: org.hibernate.spatial.dialect.postgis.PostgisDialect
