--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -24,6 +24,22 @@ spring:
               args:
                 name: fallbackAuth
                 fallbackUri: forward:/fallbackAuthServer
+            - RewritePath=/(?<segment>.*), /$\{segment}
+            - name: TimeLimiter
+              args:
+                name: fallbackAuth
+                fallbackUri: forward:/fallbackAuthServer
+            - RewritePath=/(?<segment>.*), /$\{segment}
+            - name: TimeLimiter
+              args:
+                name: fallbackAuth
+                fallbackUri: forward:/fallbackAuthServer
+            - RewritePath=/(?<segment>.*), /$\{segment}
+            - name: RateLimiter
+              args:
+                name: fallbackAuth
+                fallbackUri: forward:/fallbackAuthServer
+            
         - id: userDetailService
           uri: lb://USER-DETAIL
           predicates:
